@startuml
interface IObjectsCreator {
    + {abstract} createNewMachine(machineIndex:int) : void
    + {abstract} createNewMachineWithGO(machineIndex:int) : GameObject
}
class ObjectsCreatorImpl {
    + Construct(machineViewFactory:MachineView.Factory, anchorPresenterFactory:MachinePresenter.Factory) : void
    + createNewMachine(machineIndex:int) : void
    + createNewMachineWithGO(machineIndex:int) : GameObject
}
MonoBehaviour <|-- ObjectsCreatorImpl
IObjectsCreator <|-- ObjectsCreatorImpl
@enduml
